1. Navbar alignment matched on all pages. 2. Footer width matched to breakpoints. 3. BarPage CSS aligment issues sorted.

--- a/styles/ResultsHeader.module.css
+++ b/styles/ResultsHeader.module.css
@@ -33,8 +33,8 @@
 .align_input_left{
     width: 70%;
     padding-right: 20px;
+    padding-left: 45px;
     text-decoration: none;
-    /* border: 1px solid red; */
 }
 
 .search_container {
@@ -71,7 +71,7 @@
 
 .about_login{
     display: flex;
-    width: 200px;
+    width: 232px;
     justify-content: space-around;
 }
 
