--- a/styles/barpage.module.css
+++ b/styles/barpage.module.css
@@ -5,14 +5,21 @@
     position: relative;
 }
 
-.bar_name {
+.bar_name_container{
     width: 100%;
-    height: 66px;
     background-color: var(--green);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bar_name_innerContainer {
+    width: 80%;
+    max-width: 1130px;
+    height: 66px;
     color: var(--white);
     display: flex;
     align-items: center;
-    padding-left: 330px;
     letter-spacing: 0.02rem;
     border-top: 1px solid black;
 }
@@ -21,20 +28,24 @@
     width: 100%;
     background-color: black;
     min-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .bar_description {
     color: white;
     line-height: 1.8;
     text-align: justify;
-    width: 760px;
+    width: 70%;
+    max-width: 1130px;
 }
 
 .breakpoints{
-    width: 65.5%;
-    margin-left: 330px;
+    width: 80%;
+    max-width: 1130px;
     padding-top: 76px;
-    padding-bottom: 60px;
+    padding-bottom: 76px;
     display: flex;
     justify-content: space-between;
 
@@ -46,4 +57,9 @@
     height: 245px;
     width: 250px;
     border-radius: 6px;
+    padding: 25px;
+}
+
+.bar_features>ul{
+    list-style: none;
 }
